subiendo estilos y actualizaciones de vistas

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "Edwardian Script Regular";
+    src: url('../fonts/Edwardian Script ITC Regular.ttf'); /* Asegúrate de reemplazar esto con la ruta correcta a tu archivo de fuente */
+}
+
+
